tests/ui/ingress-client/ingress_client_ext_without_feature.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ingress`
 --> tests/ui/ingress-client/ingress_client_ext_without_feature.rs:4:13
  |
4 |     let _ = ingress::Client::new("http://localhost:8080".try_into()?, None)?;
  |             ^^^^^^^ use of unresolved module or unlinked crate `ingress`
  |
help: there is a crate or module with a similar name
  |
4 -     let _ = ingress::Client::new("http://localhost:8080".try_into()?, None)?;
4 +     let _ = regress::Client::new("http://localhost:8080".try_into()?, None)?;
  |
help: consider importing this struct
  |
1 + use reqwest::Client;
  |
help: if you import `Client`, refer to it directly
  |
4 -     let _ = ingress::Client::new("http://localhost:8080".try_into()?, None)?;
4 +     let _ = Client::new("http://localhost:8080".try_into()?, None)?;
  |

warning: unused import: `restate_sdk::prelude::*`
 --> tests/ui/ingress-client/ingress_client_ext_without_feature.rs:1:5
  |
1 | use restate_sdk::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
